Use toList() instead of collect()